# Ualg-IA

lab1_cpp/: CMakeLists.txt  a-BestFirst.su  a-Board.su  a-ILayout.su  a-Main.su  a.out  test.txt  test2.txt  test3.txt
lab1_cpp/include/: BestFirst.hpp  Board.hpp  ILayout.hpp
lab1_cpp/src/: BestFirst.cpp  Board.cpp  ILayout.cpp  Main.cpp
lab1_cpp/test/: BestFirstTests.cpp  BoardTests.cpp
lab2_cpp/: CMakeLists.txt  a.out  gmon.out  valgrind-out.txt
lab2_cpp/include/: BestFirst.hpp  Board.hpp  ContainerLayout.hpp
lab2_cpp/src/: BestFirst.cpp  Board.cpp  ContainerLayout.cpp  Main.cpp
lab2_cpp/test/: BestFirstTests.cpp  BoardTests.cpp  ContainerLayoutTests.cpp
lab3/: thought.txt  todo.txt
lab3/javadoc/: BestFirst.html  Board.html  Main.html  StateSpaceStats.html  allclasses-index.html  allpackages-index.html  help-doc.html  overview-tree.html  package-tree.html  search.html
lab3_cpp/: CMakeLists.txt
lab3_cpp/include/: AStar.hpp  ILayout.hpp
lab3_cpp/src/: AStar.cpp  BestFirst.cpp  Board.cpp  ContainerLayout.cpp  ILayout.cpp  Main.cpp
lab3_cpp/test/: AStarTests.cpp  BestFirstTests.cpp  ContainerLayoutTests.cpp
lab3_final/: README.md
lab3_final/javadoc/: AStar.html  ContainerLayout.html  ILayout.html  index-all.html  index.html  member-search-index.js  package-summary.html  type-search-index.js
lab5/: data.ods  make_java_mooshak.sh  todo.md
lab5/dataset/: cropped_dataset.csv  cropped_dataset_2.csv  dithered_dataset.csv  dithered_dataset_2.csv  dithered_dataset_4.csv  my_inputs.csv
lab5/javadoc/: Matrix.html  NeuralNetworkSerializer.html  (+6 more)
(+120 files in other folders)
